--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,18 @@
     <string name="task_category">Task Category</string>
     <string name="task_title">Task Title</string>
     <string name="kamu_punya_0_hari_ini">Kamu punya 0 hari ini</string>
+    <string name="add_category">Add Category</string>
+    <string name="category_name">Category Name</string>
+    <string name="tambah_kategori_baru">Tambah Kategori Baru</string>
+    <string name="add_category_success_message">Category berhasil ditambahkan</string>
+    <string name="nama_category">Nama Category</string>
+    <string name="tambah_kategori">Tambah Kategori</string>
+    <string name="nama_task">Nama Task</string>
+    <string name="tanggal_task">Tanggal Task</string>
+    <string name="masukkan_nama_task">Masukkan nama task</string>
+    <string name="add_new_task">Tambah Task Baru</string>
+    <string name="add_new_category">Tambah Category Baru</string>
+    <string name="masukkan_tanggal_task">Masukkan tanggal task</string>
+    <string name="jam_task">Jam Task</string>
+    <string name="kategori_task">Kategori Task</string>
 </resources>
