add task without validation, get task on home fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Mantoo</string>
-    <string name="halo_selamat_datang_di_mantoo">Halo, selamat datang di Mantoo</string>
+    <string name="halo_selamat_datang_di_mantoo">Halo, selamat datang di Mantoo 👋</string>
     <string name="siapa_nama_kamu">Siapa nama kamu ?</string>
     <string name="hello_world">Hello World</string>
     <string name="welcome_messages">Halo, %1$s! \nSelamat Datang di Mantoo.</string>
@@ -24,4 +24,7 @@
     <string name="masukkan_tanggal_task">Masukkan tanggal task</string>
     <string name="jam_task">Jam Task</string>
     <string name="kategori_task">Kategori Task</string>
+    <string name="masukkan_deskripsi_task">Masukkan deskripsi task</string>
+    <string name="deskripsi_task">Deskripsi Task</string>
+    <string name="masukkan_jam_task">Masukkan jam task</string>
 </resources>
