add PrePopulateData to insert category and priority, add priority on add task fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="delete">Delete</string>
     <string name="daftar_task">Daftar Task</string>
     <string name="add_task_success_message">Task berhasil ditambahkan</string>
+    <string name="prioritas_task">Prioritas Task</string>
 </resources>
