--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="daftar_task">Daftar Task</string>
     <string name="add_task_success_message">Task berhasil ditambahkan</string>
     <string name="prioritas_task">Prioritas Task</string>
+    <string name="daftar_kategori">Daftar Kategori</string>
 </resources>
